[gd_scene load_steps=12 format=3 uid="uid://dulowrcksv4mf"]

[ext_resource type="PackedScene" uid="uid://3jx3bsvdpka7" path="res://Scenes/Timer.tscn" id="1_5jwfv"]
[ext_resource type="Script" path="res://Scenes/cans.gd" id="1_n4kri"]
[ext_resource type="Texture2D" uid="uid://de4hbrn0f16ni" path="res://Assets/Shake the Can/shake-the-can-background.png" id="2_1wgq8"]
[ext_resource type="PackedScene" uid="uid://cfq6qpqhcj8vw" path="res://Scenes/conk_can.tscn" id="3_tfbxa"]
[ext_resource type="Texture2D" uid="uid://ccbmby5kns7uo" path="res://Assets/Shake the Can/arm-empty.png" id="4_w2wbx"]
[ext_resource type="Script" path="res://MentoHand.gd" id="5_c1slh"]
[ext_resource type="Shader" path="res://Shaders/grayscale.gdshader" id="7_oke3x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sf207"]
shader = ExtResource("7_oke3x")
shader_parameter/gray_a = 0.0

[sub_resource type="Animation" id="Animation_grefo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GrayScale:material:shader_parameter/gray_a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GrayScale:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_3kmlr"]
resource_name = "fade_to_gray"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GrayScale:material:shader_parameter/gray_a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.31864, 2.37841),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GrayScale:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2wyva"]
_data = {
"RESET": SubResource("Animation_grefo"),
"fade_to_gray": SubResource("Animation_3kmlr")
}

[node name="Cans" type="Node2D"]
script = ExtResource("1_n4kri")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelTimer" parent="CanvasLayer" instance=ExtResource("1_5jwfv")]
timeToPlay = 10

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 960.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_1wgq8")

[node name="Conk_1" parent="." instance=ExtResource("3_tfbxa")]
position = Vector2(375, 494)

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(-105, 354)
texture = ExtResource("4_w2wbx")
offset = Vector2(-500, -125)
script = ExtResource("5_c1slh")

[node name="Conk_2" parent="." instance=ExtResource("3_tfbxa")]
position = Vector2(675, 525)

[node name="Conk_3" parent="." instance=ExtResource("3_tfbxa")]
position = Vector2(990, 512)

[node name="GrayScale" type="ColorRect" parent="."]
z_index = 4
material = SubResource("ShaderMaterial_sf207")
offset_right = 1280.0
offset_bottom = 960.0
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2wyva")
}

[connection signal="timeDone" from="CanvasLayer/LevelTimer" to="." method="_on_level_timer_time_done"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
